--- a/gb/21/7/26/n13117274.md
+++ b/gb/21/7/26/n13117274.md
@@ -1,12 +1,15 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/eeygma3264/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/eeygma3264/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/eeygma3264/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/eeygma3264/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/eeygma3264/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/eeygma3264/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/eeygma3264/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/eeygma3264/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/eeygma3264/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/eeygma3264/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/eeygma3264/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/eeygma3264/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/eeygma3264/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/eeygma3264/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/eeygma3264/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/eeygma3264/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/eeygma3264/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/eeygma3264/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/eeygma3264/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/eeygma3264/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/eeygma3264/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/eeygma3264/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/eeygma3264/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/eeygma3264/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/eeygma3264/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/eeygma3264/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/eeygma3264/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/eeygma3264/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/eeygma3264/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/eeygma3264/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/eeygma3264/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/eeygma3264/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/eeygma3264/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/eeygma3264/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/eeygma3264/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/eeygma3264/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/eeygma3264/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/eeygma3264/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/eeygma3264/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/eeygma3264/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/eeygma3264/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/eeygma3264/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/eeygma3264/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/eeygma3264/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/eeygma3264/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/eeygma3264/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/eeygma3264/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/eizauy3553/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>【时事纵横】美中天津过招 李克强发话泄密？</h2>
-
-<h6></h6>
+<a href="https://d17bhfsmf5ovpz.cloudfront.net/N7t3kSQok"><img width="600" src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3>
+<h6>美中天津会，中共战狼发飙，美“私下”强硬；台风“烟花”来袭，上海状如末日；李克强对郑州发话，河南阻挡外媒报导，（时事纵横提供）
+</h6>
 <hr>
-	<p>【大纪元2021年07月27日讯】大家好，欢迎收看《<ahref="https://github.com/eeygma3264/djy/blob/master/gb/tag/%E6%97%B6%E4%BA%8B%E7%BA%B5%E6%A8%AA.md#1">时事纵横</a>》，我是扶摇。今天是2021年7月26日，星期一。</p>
-<p>今天关注的焦点：美中天津会，中共战狼发飙，美“私下”强硬；<ahref="https://github.com/eeygma3264/djy/blob/master/gb/tag/%E5%8F%B0%E9%A3%8E%E2%80%9C%E7%83%9F%E8%8A%B1%E2%80%9D.md#1">台风“烟花”</a>来袭，上海状如末日；李克强对郑州发话，河南阻挡外媒报导；南京变替罪羊？中共再酿切尔诺贝利。</p>
+	<p>【大纪元2021年07月27日讯】大家好，欢迎收看《<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E6%97%B6%E4%BA%8B%E7%BA%B5%E6%A8%AA.md#1">时事纵横</a>》，我是扶摇。今天是2021年7月26日，星期一。</p>
+<p>今天关注的焦点：美中天津会，中共战狼发飙，美“私下”强硬；<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%8F%B0%E9%A3%8E%E2%80%9C%E7%83%9F%E8%8A%B1%E2%80%9D.md#1">台风“烟花”</a>来袭，上海状如末日；李克强对郑州发话，河南阻挡外媒报导；南京变替罪羊？中共再酿切尔诺贝利。</p>
+<div class="video_fit_container"><a width="635" b="356" class="video_frame" src=""></a><a href="https://d17bhfsmf5ovpz.cloudfront.net/N7t3kSQok"><img width="600" src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/embed/9IjDDi2VGXs?wmode=transparent&#038;wmode=opaque" allowfullscreen></a>
+	</div>
 <h2>美中天津会 战狼发飙 中共挑起舆论攻势</h2>
 <p>北京时间7月26日上午，美国副国务卿谢尔曼（舍曼，Wendy Sherman）在天津先后与中共外交部副部长谢锋、外交部长王毅举行闭门会谈。中方战狼再次发飙，现场气氛紧张。</p>
 <p>在第一轮对话后，中共抢先在亚洲时段挑起舆论攻势，对美方提出多项指责。</p>
@@ -37,18 +40,18 @@
 <p>结果，中共驻斯里兰卡大使馆认为路透社故意选丑照，当天在官方推特上抗议说，“在所有的比赛照片中，路透社选择了这一张，这只能说明他们是多么的丑陋。不要把政治和意识形态凌驾于体育之上，还说自己是无偏见的媒体机构。不要脸。”</p>
 <p>这让外界大跌眼镜。有人说，“到底是谁把政治和意识形态凌驾于体育之上？”“为什么要说这张照片丑？”“举重发力时照片都是这样的，有什么奇怪？”</p>
 <p>还有人找到了党媒《中国日报》和“新华社”英文版的相关报导，使用的照片和路透社大同小异。有推特网民给中共驻斯里兰卡大使馆留言说，“你有没有向新华社抗议？要不要先向侯志慧道歉，再向路透社道歉？”</p>
-<h2><ahref="https://github.com/eeygma3264/djy/blob/master/gb/tag/%E5%8F%B0%E9%A3%8E%E2%80%9C%E7%83%9F%E8%8A%B1%E2%80%9D.md#1">台风“烟花”</a>席卷浙沪 李克强对紧急情况发话</h2>
+<h2><ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%8F%B0%E9%A3%8E%E2%80%9C%E7%83%9F%E8%8A%B1%E2%80%9D.md#1">台风“烟花”</a>席卷浙沪 李克强对紧急情况发话</h2>
 <p>下面，我们再来关注中国大陆方面的消息。</p>
 <p>7月25日中午，台风“烟花”登陆浙江省舟山市；26日上午又在浙江平湖二次登陆，强度为强热带风暴。大陆气象部门预计，“烟花”上岸后会在华东地区长时间回旋或滞留，浙江、上海和江苏等地或有持续性的强风雨。</p>
 <p>受台风影响，上海市25日普降暴雨，部分地区特大暴雨，崇明、浦东及近海区域大风，风力持续增加至陆地10至12级，沿江沿海11至13级。</p>
 <p>网上流传的视频显示，在狂风暴雨中，上海天昏地暗，一片世界末日的景象；马路上的行人被狂风吹跑，非常无助。此外，黄浦江的水涨上岸，外滩看上去一片汪洋。</p>
 <p>在浙江舟山，马路上不少大树被连根拔起，压坏停在底下的车辆；绍兴柯桥区也是风大雨大。为了防台，当地提前泄洪，结果“烟花”没到，那里已经出现了洪涝。</p>
 <p>在台风来之前的24日，浙江省省长郑栅洁前往杭州地铁站等地检查防台工作，并称遇到突发状况不能层层等命令，要有第一时间的意识，明确站台、条线、全网各自职责分工和针对不同情况的应对流程，迅速及时决策，科学果断处置。</p>
-<p>大家听着，是否觉得浙江省长在吸取郑州的教训呢？这是不是官方变相承认，郑州此次<ahref="https://github.com/eeygma3264/djy/blob/master/gb/tag/%E6%B4%AA%E7%81%BE.md#1">洪灾</a>中的人员损失，是人祸，而不是天灾造成的？</p>
+<p>大家听着，是否觉得浙江省长在吸取郑州的教训呢？这是不是官方变相承认，郑州此次<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E6%B4%AA%E7%81%BE.md#1">洪灾</a>中的人员损失，是人祸，而不是天灾造成的？</p>
 <p>如果您觉得只是凑巧，我们再来看，中共总理李克强也发话了。</p>
 <p>26日，李克强主持召开抗洪抢险救灾和防汛工作视频会议。他表示，紧急情况下，除特殊行业外，果断停工、停学、停业；对城市地铁、隧道等要有保障安全硬措施，“宁可过一些，该停就停，该封就封。”</p>
 <p>强调的，都是地铁、隧道这些郑州发生重大事故的地点。</p>
-<h2>河南当局打压<ahref="https://github.com/eeygma3264/djy/blob/master/gb/tag/%E6%B4%AA%E7%81%BE.md#1">洪灾</a>信息 是谁阻挡外媒报导？</h2>
+<h2>河南当局打压<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E6%B4%AA%E7%81%BE.md#1">洪灾</a>信息 是谁阻挡外媒报导？</h2>
 <p>而河南当局在灾后是怎么应对的呢？非常遗憾，直到今天，他们依然选择掩盖、噤声。</p>
 <p>网上流出的消息显示，中共宣传机构对各网站发出通知，称“未经许可，不擅自发布人员死亡画面，不渲染悲情色彩，不关联翻炒旧闻。涉及人员伤亡，财产损失的统计数据，要严格依照权威信息”。</p>
 <p>北京律师刘晓原也在推特披露北京媒体人发的消息，此人说，自己不断接到河南某部和郑州网信办的消息，让媒体对郑州的救助“多点赞”，“少质疑”，“最好是不要质疑”等等。</p>
@@ -60,7 +63,7 @@
 <p>流亡美国的原中国盲人维权律师陈光诚说，“怎么可能是‘民间自发性阻拦’！？这分明是中共中央统一安排部署，直接指挥地方当局，组织爪牙们假冒群众，有系统地非法阻止国际记者采访。”他还表示，之前在山东，中共对他就是这么干的，没有一个人是自发的。</p>
 <p>“六四”民运人士王丹也发推文说，“以我这么多年对共产党的了解，我完全不相信这些阻挠记者的行为，是‘普通民众’的‘自发性行为’。”</p>
 <h2>南京变替罪羊？中共再酿切尔诺贝利</h2>
-<p>我们再来看<ahref="https://github.com/eeygma3264/djy/blob/master/gb/tag/%E5%8D%97%E4%BA%AC%E7%96%AB%E6%83%85.md#1">南京疫情</a>消息。</p>
+<p>我们再来看<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%8D%97%E4%BA%AC%E7%96%AB%E6%83%85.md#1">南京疫情</a>消息。</p>
 <p>此前7月20日，在南京禄口国际机场检测出来的9例，全部为Delta变异毒株，扩散力和传染力极强。目前，已经传到中国5个省、8个地区。传染源至今不明。</p>
 <p>25日，中国大陆新增76例中共病毒（武汉病毒、新冠病毒）确诊病例，这在官方对外公布的数据中，是从今年1月份以来的最高值。其中，南京的本土感染病例，在一天之内激增38例，感染的多人，居住在禄口街道的居民区，三人为高校的宿舍管理员。</p>
 <p>目前，那里已经开始对930万居民，进行第二次大规模检测和极端封控措施。</p>
@@ -75,48 +78,42 @@
 <p>切尔诺贝利核事故，让当时的苏共政权在公民心中失去了可信度，是给苏共的致命一击。而如今，全世界数百万人死亡，并损失了数万亿美元，这是因为人们无视一个集权国家，在现在和未来所构成的威胁，而付出的可怕代价。</p>
 <p>钟原也提醒大家，在看到了中共官员们所谓的防疫路数之后，民众还是应该自己准备应对为好。</p>
 <p>好的，我们今天就先说到这里，下期节目，我们不见不散。</p>
-<p>《<ahref="https://github.com/eeygma3264/djy/blob/master/gb/tag/%E6%97%B6%E4%BA%8B%E7%BA%B5%E6%A8%AA.md#1">时事纵横</a>》制作组</p>
+<p>《<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E6%97%B6%E4%BA%8B%E7%BA%B5%E6%A8%AA.md#1">时事纵横</a>》制作组</p>
 <p>责任编辑：李昊?#</p>
 	
 <hr>
-
+<hr>
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/eeygma3264/djy/blob/master/gb/21/7/19/n13100143.md#1">【时事纵横】FBI通缉中共黑客 陆电瓶车炸成火球</a></li>
-<li><a href="https://github.com/eeygma3264/djy/blob/master/gb/21/7/20/n13102853.md#1">【时事纵横】河南大劫 爆炸震四里 地铁成水牢</a></li>
-<li><a href="https://github.com/eeygma3264/djy/blob/master/gb/21/7/21/n13105563.md#1">【时事纵横】郑州洪灾四大疑点 南京疫情突起</a></li>
-<li><a href="https://github.com/eeygma3264/djy/blob/master/gb/21/7/22/n13108313.md#1">【时事纵横】郑州现死亡隧道 洪灾冲习家军仕途</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/7/19/n13100143.md#1">【时事纵横】FBI通缉中共黑客 陆电瓶车炸成火球</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/7/20/n13102853.md#1">【时事纵横】河南大劫 爆炸震四里 地铁成水牢</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/7/21/n13105563.md#1">【时事纵横】郑州洪灾四大疑点 南京疫情突起</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/7/22/n13108313.md#1">【时事纵横】郑州现死亡隧道 洪灾冲习家军仕途</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/eeygma3264/www/blob/master/README.md?dfh#1" target="_blank">下载免费翻墙软件</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/10/13/n10781989.md#1" target="_blank">林辉：北京反驳彭斯 需要补历史课的是谁？</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/12/23/n10928592.md#1" target="_blank">【视频】法轮功在俄罗斯 各行业学员身心受益</a></li>
-<hr>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank">关注3亿人三退</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/12/10/n10902151.md#1" target="_blank">龙延：中共道路是魔鬼的选择</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/1/24/n10998917.md#1" target="_blank">影片：与全世界背道而行 中共为何打击善良</a></li><hr>
+
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/sbahda331/djy/blob/master/gb/21/7/9/n13079158.md#1">【忽必烈传】马可眼中的皇帝与大元帝国</a></li>
-<li><a href="https://github.com/sbahda331/djy/blob/master/gb/21/7/20/n13102389.md#1">【未解之谜】预言家凯西：我曾是亚特兰蒂斯人</a></li>
-<li><a href="https://github.com/sbahda331/djy/blob/master/gb/21/7/24/n13111358.md#1">【小宇宙传说】时空穿越 他从1958来到2006年</a></li>
-<li><a href="https://github.com/sbahda331/djy/blob/master/gb/21/7/12/n13083162.md#1">苏东坡一身忠直正气 自述多次与鬼神谈判</a></li>
-<li><a href="https://github.com/sbahda331/djy/blob/master/gb/21/7/21/n13104808.md#1">欧阳修一生奇遇多 常怀疑自己本是世外之人</a></li>
-<li><a href="https://github.com/sbahda331/djy/blob/master/gb/21/7/24/n13112643.md#1">【新闻看点】死亡隧道存3谜 江浙沪发196警报</a></li>
-<li><a href="https://github.com/sbahda331/djy/blob/master/gb/21/7/24/n13112565.md#1">【财商天下】快速降负债 恒大走出危局？</a></li>
-<li><a href="https://github.com/sbahda331/djy/blob/master/gb/21/7/24/n13112826.md#1">【横河观点】习邓都避洪灾？美打击中共猎狐</a></li>
-<li><a href="https://github.com/sbahda331/djy/blob/master/gb/21/7/24/n13112629.md#1">台风烟花路径奇异 避开台湾直扑上海浙江</a></li>
-<li><a href="https://github.com/sbahda331/djy/blob/master/gb/21/7/24/n13112498.md#1">【一线采访】被拦隧道内 一车三人死里逃生</a></li>
-<li><a href="https://github.com/sbahda331/djy/blob/master/gb/21/7/24/n13111538.md#1">腾讯直播奥运开幕式切掉中国队进场 网民崩溃</a></li>
-<li><a href="https://github.com/sbahda331/djy/blob/master/gb/21/7/23/n13110984.md#1">吴宗宪接种第一剂疫苗 自曝隔天出现副作用</a></li>
-<li><a href="https://github.com/sbahda331/djy/blob/master/gb/21/7/25/n13114539.md#1">50岁吴奇隆体能惊人 节目竞技完胜24岁男星</a></li>
-<li><a href="https://github.com/sbahda331/djy/blob/master/gb/21/7/23/n13110829.md#1">《时代革命》团队宣布：影片版权已转到海外</a></li>
-<li><a href="https://github.com/sbahda331/djy/blob/master/gb/21/7/24/n13111732.md#1">篠原凉子与市村正亲离婚 两儿监护权归父亲</a></li>
-<li><a href="https://github.com/sbahda331/djy/blob/master/gb/21/7/24/n13111390.md#1">《恋人的最后情书》影评：相隔几十年的恋情 也能同时开花结果</a></li>
-<li><a href="https://github.com/sbahda331/djy/blob/master/gb/21/7/21/n13105343.md#1">蔬菜别直接放冰箱！专家：这样保存最长久</a></li>
-<li><a href="https://github.com/sbahda331/djy/blob/master/gb/21/7/24/n13112330.md#1">高端疫苗安全和保护力未明 专家：施打或仍有2好处</a></li>
-<li><a href="https://github.com/sbahda331/djy/blob/master/gb/21/7/22/n13108194.md#1">三高者易得肾脏病？营养师教你护肾饮食法</a></li>
-<li><a href="https://github.com/sbahda331/djy/blob/master/gb/21/7/25/n13113232.md#1">被野熊纠缠7天 美国男子在屋顶写SOS获救</a></li>
-<li><a href="https://github.com/sbahda331/djy/blob/master/gb/21/7/25/n13113601.md#1">为了保护10岁小主人 加拿大小狗被土狼咬伤</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/16/n11943195.md#1">日媒体人评台湾防疫2大功臣 第一名竟非陈时中</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/16/n11945071.md#1">【新闻看点】官媒忙降温？赵立坚及五毛被打脸</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/17/n11947698.md#1">华人纷纷回国？律师披露红二代不回国内幕</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/16/n11945291.md#1">蓬佩奥与杨洁篪通话 正告北京勿散怪诞谣言</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/17/n11946346.md#1">【现场视频】听信中共谎言 返京人挤爆机场</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/17/n11946544.md#1">台歌仔戏国宝小凤仙病逝 享寿80岁　</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/15/n11942589.md#1">赵立坚甩锅病毒源自美国 艺人黄秋生狠酸中共</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/17/n11947993.md#1">伊朗隐瞒疫情 来自伊朗的台湾女婿爆真相</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/15/n11942781.md#1">潘迎紫呼吸道感染急就医 被要求检测新冠病毒</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/15/n11942415.md#1">西班牙疫情大爆发 梁咏琪一家三口封城前返港</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/11/n11933369.md#1">清朝学士三奇梦 是谁掌握他的一生？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/11/n11933376.md#1">僧人精准预言 琅琊三孩童竟是“真一品”</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/1/31/n3790016.md#1">米开朗基罗Michelangelo（1）早年生涯</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/17/n11946008.md#1">名人纷确诊 《权力游戏》《复仇者》演员染疫</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/11/8/n11641181.md#1">【医案】老天的考卷</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/eeygma3264/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/eeygma3264/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/7/26/n13117274.htm">【时事纵横】美中天津过招 李克强发话泄密？</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/7/26/n13117274.htm">【时事纵横】美中天津过招 李克强发话泄密？</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/eeygma3264/djy/blob/master/gb/21/7/26/n13117274.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/eeygma3264/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eeygma3264/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/eeygma3264/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/eeygma3264/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/eeygma3264/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eeygma3264/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/eeygma3264/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eeygma3264/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/eeygma3264/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eeygma3264/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/eeygma3264/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eeygma3264/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/eeygma3264/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eeygma3264/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/eeygma3264/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eeygma3264/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/eeygma3264/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eeygma3264/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/eeygma3264/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eeygma3264/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/eeygma3264/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eeygma3264/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/eeygma3264/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eeygma3264/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/eeygma3264/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eeygma3264/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/eeygma3264/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eeygma3264/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/eeygma3264/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eeygma3264/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/eeygma3264/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eeygma3264/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/eeygma3264/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eeygma3264/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/eeygma3264/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eeygma3264/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/eeygma3264/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eeygma3264/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/eeygma3264/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eeygma3264/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/eeygma3264/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eeygma3264/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/eeygma3264/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eeygma3264/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/eeygma3264/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eeygma3264/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/eeygma3264/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eeygma3264/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/eizauy3553/djy/blob/master/gb/21/7/26/n13117274.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
